--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,17 @@ services:
       - redis_data:/data
     ports:
       - "6379:6379"
+  pgvector_db:
+    image: ankane/pgvector
+    # persist data beyond lifetime of container
+    volumes:
+      - pgvector_data:/var/lib/postgresql/data/
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    ports:
+      - "5433:5432"
 volumes:
   postgres_data:
   redis_data:
+  pgvector_data:
